crates/strider/tests/snapshots/v3__ppc32le__globals__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100100fc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x10010118:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x10010138:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v18" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v18" [color="#888888", style=dashed];
  "v18" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "19" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "13" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x10010164:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "19" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v24" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v24" [color="#888888", style=dashed];
  "v24" -> "19" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "25" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "19" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v28" [color="#888888", style=dashed];
  "v28" -> "25" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v29" [color="#888888", style=dashed];
  "v29" -> "25" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v30" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "27" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "19" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "19" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v24" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "13" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "13" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "13" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "38" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "7" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v42" [color="#888888", style=dashed];
  "v42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v11" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "6" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "44" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "46" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "50" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "53" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
